added numpy method, the most efficient

--- a/matrix_multiply.ipynb
+++ b/matrix_multiply.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "caa98ca7",
+   "id": "636dd110",
    "metadata": {},
    "source": [
     "# matrix- matrix multiply\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5ae7eb95",
+   "id": "d7ee297c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fcf808af",
+   "id": "c65a9950",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "576803db",
+   "id": "2d2ee0c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a75238ff",
+   "id": "7e79da44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e1de8e75",
+   "id": "2775c150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "525b2ae0",
+   "id": "ad578f19",
    "metadata": {},
    "outputs": [
     {
@@ -111,8 +111,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "7635ff25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exec_time = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c078193a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0031406590001097356, 0.0008630300001186697]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#remember to put exec_time = [] in a different cell when running tests.\n",
+    "#run exec_time = [] before first trial.\n",
+    "\n",
+    "import numpy as np\n",
+    "import timeit\n",
+    "SIZE = 256 \n",
+    "\n",
+    "matrix1 = np.random.rand(SIZE, SIZE)\n",
+    "matrix2 = np.random.rand(SIZE, SIZE)\n",
+    "\n",
+    "def matrix_multiply():\n",
+    "    return np.matmul(matrix1, matrix2)\n",
+    "\n",
+    "# Time the execution of the function\n",
+    "exec_time.append(timeit.timeit(matrix_multiply, number=1))\n",
+    "exec_time"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b2679e12",
+   "id": "87be3833",
    "metadata": {},
    "outputs": [],
    "source": []
