added set comprehension method, least efficient

--- a/matrix_multiply.ipynb
+++ b/matrix_multiply.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "caa98ca7",
+   "id": "b1aaa8ff",
    "metadata": {},
    "source": [
     "# matrix- matrix multiply\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5ae7eb95",
+   "id": "bae4733b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fcf808af",
+   "id": "3eca4210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "576803db",
+   "id": "a5884f02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a75238ff",
+   "id": "7a8a9d4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e1de8e75",
+   "id": "40b6021a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "525b2ae0",
+   "id": "e421d893",
    "metadata": {},
    "outputs": [
     {
@@ -111,8 +111,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "1da6ad54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exec_time = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "40c87d53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0031406590001097356, 0.0008630300001186697]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#remember to put exec_time = [] in a different cell when running tests.\n",
+    "#run exec_time = [] before first trial.\n",
+    "\n",
+    "import numpy as np\n",
+    "import timeit\n",
+    "SIZE = 256 \n",
+    "\n",
+    "matrix1 = np.random.rand(SIZE, SIZE)\n",
+    "matrix2 = np.random.rand(SIZE, SIZE)\n",
+    "\n",
+    "def matrix_multiply():\n",
+    "    return np.matmul(matrix1, matrix2)\n",
+    "\n",
+    "# Time the execution of the function\n",
+    "exec_time.append(timeit.timeit(matrix_multiply, number=1))\n",
+    "exec_time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6fc7be3",
+   "metadata": {},
+   "source": [
+    "set comprehension method, why is this so inefficient?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1a7e2b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time: 1.3583752780000395 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "def test_matrix(n, m):\n",
+    "    matrix = []\n",
+    "    for i in range(n):\n",
+    "        row = []\n",
+    "        for j in range(m):\n",
+    "            #element can be changed here.\n",
+    "            element = 1  \n",
+    "            row.append(element)\n",
+    "        matrix.append(row)\n",
+    "    return matrix\n",
+    "\n",
+    "\n",
+    "X = test_matrix(256,256)\n",
+    "Y = test_matrix(256,256)\n",
+    "\n",
+    "def matrix_multiply():\n",
+    "    return [[sum(a*b for a,b in zip(X_row,Y_col)) for Y_col in zip(*Y)] for X_row in X]\n",
+    "\n",
+    "# Time the execution of the function\n",
+    "execution_time = timeit.timeit(matrix_multiply, number=1)\n",
+    "\n",
+    "print(f\"Execution time: {execution_time} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b2679e12",
+   "id": "0db49557",
    "metadata": {},
    "outputs": [],
    "source": []
