--- a/matrix_multiply.ipynb
+++ b/matrix_multiply.ipynb
@@ -7,7 +7,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "06b0c402",
    "metadata": {},
    "source": [
     "# matrix- matrix multiply\n",
@@ -20,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1029ae04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2e7aa8ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1d1b14e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "04ac911d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "202076f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1496cc22",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +105,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "96ae8271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ea75ac04",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +148,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb56642",
    "metadata": {},
    "source": [
     "set comprehension method, why is this so inefficient?\n"
@@ -166,7 +156,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "411636fe",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +196,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8faa199e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -215,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cba48e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -223,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
