added recursion, generating list of array

--- a/block.ipynb
+++ b/block.ipynb
@@ -174,6 +174,9 @@
     "    quadrant3 = matrix[mid_row:, :mid_col]\n",
     "    quadrant4 = matrix[mid_row:, mid_col:]\n",
     "    print(quadrant1)\n",
+    "    print(quadrant2)\n",
+    "    print(quadrant3)\n",
+    "    print(quadrant4)\n",
     "\n",
     "print(block(C))"
    ]
@@ -184,7 +187,34 @@
    "id": "9a602ccc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "C  = np.arange(1, 65).reshape(8, 8)\n",
+    "\n",
+    "def block(matrix):\n",
+    "    rows, cols = matrix.shape\n",
+    "    #base case, return itself\n",
+    "    if rows <= 2 and cols <= 2:\n",
+    "        return [matrix]\n",
+    "\n",
+    "     # Split the matrix into four quadrants\n",
+    "    mid_row = rows // 2\n",
+    "    mid_col = cols // 2\n",
+    "    \n",
+    "    quadrant1 = matrix[:mid_row, :mid_col]\n",
+    "    quadrant2 = matrix[:mid_row, mid_col:]\n",
+    "    quadrant3 = matrix[mid_row:, :mid_col]\n",
+    "    quadrant4 = matrix[mid_row:, mid_col:]\n",
+    "    print(quadrant1)\n",
+    "    print(quadrant2)\n",
+    "    print(quadrant3)\n",
+    "    print(quadrant4)\n",
+    "\n",
+    "    submatrix = []\n",
+    "\n",
+    "    submatrix.extend(block(quadrant1))\n",
+    "\n",
+    "    return submatrix\n"
+   ]
   }
  ],
  "metadata": {
