--- a/block.ipynb
+++ b/block.ipynb
@@ -215,6 +215,54 @@
     "\n",
     "    return submatrix\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b56b9d6e",
+   "metadata": {},
+   "source": [
+    "following code snippet captures the whole idea but returns a list of arrays.. i believe for my purpose an array of arrays may be more suitable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23629511",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#generate test array\n",
+    "X  = np.arange(1, 65).reshape(8, 8)\n",
+    "           \n",
+    "def block(matrix):\n",
+    "    rows, cols = matrix.shape\n",
+    "    #base case, return itself\n",
+    "    if rows <= 2 and cols <= 2:\n",
+    "        return [matrix]\n",
+    "\n",
+    "     # Split the matrix into four quadrants\n",
+    "    mid_row = rows // 2\n",
+    "    mid_col = cols // 2\n",
+    "    \n",
+    "    quadrant1 = matrix[:mid_row, :mid_col]\n",
+    "    quadrant2 = matrix[:mid_row, mid_col:]\n",
+    "    quadrant3 = matrix[mid_row:, :mid_col]\n",
+    "    quadrant4 = matrix[mid_row:, mid_col:]\n",
+    "    \n",
+    "    #recursively call block on each quadrant\n",
+    "    #store value in submatrix list.\n",
+    "    submatrix = []\n",
+    "    submatrix.extend(block(quadrant1))\n",
+    "    submatrix.extend(block(quadrant2))\n",
+    "    submatrix.extend(block(quadrant3))\n",
+    "    submatrix.extend(block(quadrant4))\n",
+    "   \n",
+    "\n",
+    "    return submatrix\n",
+    "\n",
+    "\n",
+    "print(block(X))"
+   ]
   }
  ],
  "metadata": {
@@ -233,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.9"
   },
   "vscode": {
    "interpreter": {
