--- a/matrix_multiply.ipynb
+++ b/matrix_multiply.ipynb
@@ -210,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -225,6 +225,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5f00346fb2f6f5f1a6b8f889316ab2e4c72ba0690fe5a3a43e996542c4adc3f2"
+   }
   }
  },
  "nbformat": 4,
