peeled a layer off of list of arrays of lists

--- a/block.ipynb
+++ b/block.ipynb
@@ -33,6 +33,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "db52ef4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "6803b57d",
    "metadata": {},
@@ -263,6 +271,25 @@
     "\n",
     "print(block(X))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8b8e6b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z  = np.arange(1, 17).reshape(4, 4)\n",
+    "q1, q1, q2, q3, q4 = block(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67d2ab54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
