--- a/ijk_mm.ipynb
+++ b/ijk_mm.ipynb
@@ -116,6 +116,79 @@
    "execution_count": null,
    "id": "1aa85628",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mAttributeError: module 'timeit' has no attribute 'Timer'. Did you mean: 'time'?. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def block(matrix):\n",
+    "    rows, cols = matrix.shape\n",
+    "\n",
+    "    # Base case, return itself\n",
+    "    if rows <= 2 and cols <= 2:\n",
+    "        return np.array([matrix])\n",
+    "\n",
+    "    # Split the matrix into four quadrants\n",
+    "    mid_row = rows // 2\n",
+    "    mid_col = cols // 2\n",
+    "\n",
+    "    quadrant1 = matrix[:mid_row, :mid_col]\n",
+    "    quadrant2 = matrix[:mid_row, mid_col:]\n",
+    "    quadrant3 = matrix[mid_row:, :mid_col]\n",
+    "    quadrant4 = matrix[mid_row:, mid_col:]\n",
+    "\n",
+    "    submatrix = []\n",
+    "    submatrix.extend(block(quadrant1))\n",
+    "    submatrix.extend(block(quadrant2))\n",
+    "    submatrix.extend(block(quadrant3))\n",
+    "    submatrix.extend(block(quadrant4))\n",
+    "   \n",
+    "\n",
+    "    return submatrix\n",
+    "\n",
+    "#ijk loop\n",
+    "def ijk_mm(A,B):\n",
+    "    #check dimensions for compatibility\n",
+    "    rowsA = len(A)\n",
+    "    rowsB = len(B)\n",
+    "    colsA = len(A[0])\n",
+    "    colsB = len(B[0])\n",
+    "    if rowsB != colsA:\n",
+    "        print(\"dimension error\")\n",
+    "\n",
+    "    result = np.zeros((rowsA, colsB))\n",
+    "    \n",
+    "    for i in range(rowsA):\n",
+    "        for j in range(colsB):\n",
+    "            for k in range(colsA):\n",
+    "                result[i][j] += A[i][k] * B[k][j]\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "\n",
+    "Z = np.arange(1, 17).reshape(4, 4)\n",
+    "Y = np.arange(1, 17).reshape(4, 4)\n",
+    "q1, q2, q3, q4 = block(ijk_mm(Z,Y))\n",
+    "\n",
+    "print(q1)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fc22335",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -136,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
