--- a/block.ipynb
+++ b/block.ipynb
@@ -2,7 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "id": "41f28108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SET UP FOR NOTEBOOK. RUN THIS CELL FIRST\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def block(matrix):\n",
+    "    rows, cols = matrix.shape\n",
+    "    #base case, return itself\n",
+    "    if rows <= 2 and cols <= 2:\n",
+    "        return [matrix]\n",
+    "\n",
+    "     # Split the matrix into four quadrants\n",
+    "    mid_row = rows // 2\n",
+    "    mid_col = cols // 2\n",
+    "    \n",
+    "    quadrant1 = matrix[:mid_row, :mid_col]\n",
+    "    quadrant2 = matrix[:mid_row, mid_col:]\n",
+    "    quadrant3 = matrix[mid_row:, :mid_col]\n",
+    "    quadrant4 = matrix[mid_row:, mid_col:]\n",
+    "    \n",
+    "    #recursively call block on each quadrant\n",
+    "    #store value in submatrix list.\n",
+    "    submatrix = []\n",
+    "    submatrix.extend(block(quadrant1))\n",
+    "    submatrix.extend(block(quadrant2))\n",
+    "    submatrix.extend(block(quadrant3))\n",
+    "    submatrix.extend(block(quadrant4))\n",
+    "   \n",
+    "\n",
+    "    return submatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b313e295",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "8782e002",
    "metadata": {},
    "outputs": [
@@ -33,15 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "db52ef4c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6803b57d",
    "metadata": {},
    "outputs": [
@@ -72,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "cab5899c",
    "metadata": {},
    "outputs": [
@@ -102,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "7edc72cc",
    "metadata": {},
    "outputs": [
@@ -116,7 +154,7 @@
     }
    ],
    "source": [
-    " #same thing as B but better.\n",
+    "\n",
     "C  = np.arange(1, 65).reshape(8, 8)\n",
     "\n",
     "def block(matrix):\n",
@@ -147,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "2136e17c",
    "metadata": {},
    "outputs": [
@@ -159,12 +197,24 @@
       " [ 9 10 11 12]\n",
       " [17 18 19 20]\n",
       " [25 26 27 28]]\n",
+      "[[ 5  6  7  8]\n",
+      " [13 14 15 16]\n",
+      " [21 22 23 24]\n",
+      " [29 30 31 32]]\n",
+      "[[33 34 35 36]\n",
+      " [41 42 43 44]\n",
+      " [49 50 51 52]\n",
+      " [57 58 59 60]]\n",
+      "[[37 38 39 40]\n",
+      " [45 46 47 48]\n",
+      " [53 54 55 56]\n",
+      " [61 62 63 64]]\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    " #same thing as B but better.\n",
+    "\n",
     "C  = np.arange(1, 65).reshape(8, 8)\n",
     "\n",
     "def block(matrix):\n",
@@ -191,18 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9a602ccc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "C  = np.arange(1, 65).reshape(8, 8)\n",
     "\n",
     "def block(matrix):\n",
     "    rows, cols = matrix.shape\n",
-    "    #base case, return itself\n",
+    "     # Base case, return itself\n",
     "    if rows <= 2 and cols <= 2:\n",
-    "        return [matrix]\n",
+    "        return np.array([matrix])\n",
     "\n",
     "     # Split the matrix into four quadrants\n",
     "    mid_row = rows // 2\n",
@@ -225,19 +276,35 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b56b9d6e",
-   "metadata": {},
-   "source": [
-    "following code snippet captures the whole idea but returns a list of arrays.. i believe for my purpose an array of arrays may be more suitable."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23629511",
+   "execution_count": 6,
+   "id": "ac9de67f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[ 1,  2],\n",
+      "       [ 9, 10]]), array([[ 3,  4],\n",
+      "       [11, 12]]), array([[17, 18],\n",
+      "       [25, 26]]), array([[19, 20],\n",
+      "       [27, 28]]), array([[ 5,  6],\n",
+      "       [13, 14]]), array([[ 7,  8],\n",
+      "       [15, 16]]), array([[21, 22],\n",
+      "       [29, 30]]), array([[23, 24],\n",
+      "       [31, 32]]), array([[33, 34],\n",
+      "       [41, 42]]), array([[35, 36],\n",
+      "       [43, 44]]), array([[49, 50],\n",
+      "       [57, 58]]), array([[51, 52],\n",
+      "       [59, 60]]), array([[37, 38],\n",
+      "       [45, 46]]), array([[39, 40],\n",
+      "       [47, 48]]), array([[53, 54],\n",
+      "       [61, 62]]), array([[55, 56],\n",
+      "       [63, 64]])]\n"
+     ]
+    }
+   ],
    "source": [
     "#generate test array\n",
     "X  = np.arange(1, 65).reshape(8, 8)\n",
@@ -269,24 +336,79 @@
     "    return submatrix\n",
     "\n",
     "\n",
-    "print(block(X))"
+    "print(block(X))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7edc76e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1, 2],\n",
+      "       [5, 6]]), array([[3, 4],\n",
+      "       [7, 8]]), array([[ 9, 10],\n",
+      "       [13, 14]]), array([[11, 12],\n",
+      "       [15, 16]])]\n",
+      "[[1 2]\n",
+      " [5 6]]\n",
+      "[[3 4]\n",
+      " [7 8]]\n",
+      "[[ 4  6]\n",
+      " [12 14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A  = np.arange(1, 17).reshape(4, 4)\n",
+    "print(block(Z))\n",
+    "\n",
+    "q1, q2, q3, q4 = block(A)\n",
+    "print(q1)\n",
+    "print(q2)\n",
+    "print(q1 + q2)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b8e6b9",
+   "id": "ae618609",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Z  = np.arange(1, 17).reshape(4, 4)\n",
-    "q1, q1, q2, q3, q4 = block(Z)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d2ab54",
+   "id": "b0a45e50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c0f967d-34ec-4dfc-a70d-7a594c3d0c7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59913919-4a7a-4810-ba4b-ee78ec1d436e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01ca6f5a-04d7-461a-807a-44404710e619",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -308,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
