--- a/ijk_mm.ipynb
+++ b/ijk_mm.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "27aa0ebd",
    "metadata": {
     "scrolled": true
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "f5a7b961-5a44-4da3-a007-1793ba861f97",
    "metadata": {
     "scrolled": true
@@ -713,6 +713,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ 90. 100. 110. 120.]\n",
+      " [202. 228. 254. 280.]\n",
+      " [314. 356. 398. 440.]\n",
+      " [426. 484. 542. 600.]]\n",
+      "[[ 90. 100. 110. 120.]\n",
+      " [202. 228. 254. 280.]\n",
+      " [314. 356. 398. 440.]\n",
+      " [426. 484. 542. 600.]]\n",
+      "[[ 90. 100.]\n",
+      " [202. 228.]]\n",
       "[[ 28.  34.]\n",
       " [ 92. 114.]]\n"
      ]
@@ -769,12 +779,27 @@
     "A = np.arange(1, 17).reshape(4, 4)\n",
     "B = np.arange(1, 17).reshape(4, 4)\n",
     "\n",
-    "A_quadrant1, A_quadrant2, A_quadrant3, A_quadrant4 = block(A)\n",
-    "B_quadrant1, B_quadrant2, B_quadrant3, B_quadrant4 = block(B)\n",
+    "A_NW, A_NE, A_SW, A_SE = block(A)\n",
+    "B_NW, B_NE, B_SW, B_SE = block(B)\n",
+    "testme = ijk_mm(A, B)\n",
+    "print(testme)\n",
     "\n",
-    "Result_00 = ijk_mm(A_quadrant1, B_quadrant1) + ijk_mm(A_quadrant1, B_quadrant2)\n",
+    "\n",
+    "def ans(A_NW, A_NE, A_SW, A_SE, B_NW, B_NE, B_SW, B_SE):\n",
+    "\n",
+    "    Result_00 = ijk_mm(A_NW, B_NW) + ijk_mm(A_NE, B_SW)\n",
+    "    Result_01 = ijk_mm(A_NW, B_NE) + ijk_mm(A_NE, B_SE)\n",
+    "    Result_10 = ijk_mm(A_SW, B_NW) + ijk_mm(A_SE, B_SW)\n",
+    "    Result_11 = ijk_mm(A_SW, B_NE) + ijk_mm(A_SE, B_SE)\n",
+    "    Result = np.block([[Result_00, Result_01], [Result_10, Result_11]])\n",
+    "    return Result\n",
+    "\n",
+    "\n",
+    "print(ans(A_NW, A_NE, A_SW, A_SE, B_NW, B_NE, B_SW, B_SE))\n",
+    "\n",
     "print(Result_00)\n",
-    "\n",
+    "C_00 = sum([ijk_mm(A_quadrant1, B_quadrant1),ijk_mm(A_quadrant1, B_quadrant2)])\n",
+    "print(C_00)\n",
     "#...\n"
    ]
   },
@@ -782,6 +807,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7fffcbfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95ff468b-e5ec-475b-ba5e-c733d3e579c0",
    "metadata": {},
    "outputs": [],
    "source": []
