working in blocking function for tensors

--- a/block.ipynb
+++ b/block.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "41f28108",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ac9de67f",
    "metadata": {},
    "outputs": [
@@ -306,6 +306,7 @@
     }
    ],
    "source": [
+    "import numpy as np \n",
     "#generate test array\n",
     "X  = np.arange(1, 65).reshape(8, 8)\n",
     "           \n",
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "7edc76e4",
    "metadata": {},
    "outputs": [
@@ -365,7 +366,7 @@
    ],
    "source": [
     "A  = np.arange(1, 17).reshape(4, 4)\n",
-    "print(block(Z))\n",
+    "print(block(A))\n",
     "\n",
     "q1, q2, q3, q4 = block(A)\n",
     "print(q1)\n",
@@ -375,35 +376,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ae618609",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def block_n(matrix):\n",
+    "    dimensions = matrix.shape\n",
+    "    return dimensions\n",
+    "print(block_n(A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d35854e",
+   "metadata": {},
+   "source": [
+    "but what if i have n dimension???\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b0a45e50",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3  4]\n",
+      "  [ 5  6  7  8]\n",
+      "  [ 9 10 11 12]\n",
+      "  [13 14 15 16]]\n",
+      "\n",
+      " [[17 18 19 20]\n",
+      "  [21 22 23 24]\n",
+      "  [25 26 27 28]\n",
+      "  [29 30 31 32]]\n",
+      "\n",
+      " [[33 34 35 36]\n",
+      "  [37 38 39 40]\n",
+      "  [41 42 43 44]\n",
+      "  [45 46 47 48]]\n",
+      "\n",
+      " [[49 50 51 52]\n",
+      "  [53 54 55 56]\n",
+      "  [57 58 59 60]\n",
+      "  [61 62 63 64]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#n dimension test case\n",
+    "n = (4, 4, 4)\n",
+    "\n",
+    "def test_case(dimensions):\n",
+    "    val = np.arange(1, np.prod(n) + 1)\n",
+    "    matrix = np.reshape(val, dimensions)\n",
+    "    return matrix\n",
+    "\n",
+    "testme = test_case(n)\n",
+    "print(testme)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7c0f967d-34ec-4dfc-a70d-7a594c3d0c7e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def block(matrix):\n",
+    "    dimensions = matrix.shape\n",
+    "    ndims = len(dimensions)\n",
+    "    \n",
+    "    # Base case: return itself\n",
+    "    if all(dim <= 2 for dim in dimensions):\n",
+    "        return [matrix]\n",
+    "\n",
+    "    # Split the matrix along each dimension\n",
+    "    submatrices = []\n",
+    "    for i in range(ndims):\n",
+    "        mid = dimensions[i] // 2\n",
+    "        slices = [slice(None)] * ndims  # create a list of slices for indexing\n",
+    "        slices[i] = slice(None, mid)  # slice for the first half along current dimension\n",
+    "        submatrix1 = matrix[tuple(slices)]\n",
+    "        slices[i] = slice(mid, None)  # slice for the second half along current dimension\n",
+    "        submatrix2 = matrix[tuple(slices)]\n",
+    "        submatrices.extend(block(submatrix1))  # recursively call block on each submatrix\n",
+    "        submatrices.extend(block(submatrix2))\n",
+    "\n",
+    "    return submatrices\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "59913919-4a7a-4810-ba4b-ee78ec1d436e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thsi is without block\n",
+      "[[[[ 1  2]\n",
+      "   [ 3  4]]\n",
+      "\n",
+      "  [[ 5  6]\n",
+      "   [ 7  8]]]\n",
+      "\n",
+      "\n",
+      " [[[ 9 10]\n",
+      "   [11 12]]\n",
+      "\n",
+      "  [[13 14]\n",
+      "   [15 16]]]]\n",
+      "this is w block\n",
+      "[array([[[[ 1,  2],\n",
+      "         [ 3,  4]],\n",
+      "\n",
+      "        [[ 5,  6],\n",
+      "         [ 7,  8]]],\n",
+      "\n",
+      "\n",
+      "       [[[ 9, 10],\n",
+      "         [11, 12]],\n",
+      "\n",
+      "        [[13, 14],\n",
+      "         [15, 16]]]])]\n",
+      "[[[ 1  2  3  4]\n",
+      "  [ 5  6  7  8]\n",
+      "  [ 9 10 11 12]\n",
+      "  [13 14 15 16]]\n",
+      "\n",
+      " [[17 18 19 20]\n",
+      "  [21 22 23 24]\n",
+      "  [25 26 27 28]\n",
+      "  [29 30 31 32]]\n",
+      "\n",
+      " [[33 34 35 36]\n",
+      "  [37 38 39 40]\n",
+      "  [41 42 43 44]\n",
+      "  [45 46 47 48]]\n",
+      "\n",
+      " [[49 50 51 52]\n",
+      "  [53 54 55 56]\n",
+      "  [57 58 59 60]\n",
+      "  [61 62 63 64]]]\n"
+     ]
+    },
+    {
+     "ename": "RecursionError",
+     "evalue": "maximum recursion depth exceeded in comparison",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(this)\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(testme)\n\u001b[0;32m----> 9\u001b[0m block(testme)\n",
+      "Cell \u001b[0;32mIn[1], line 20\u001b[0m, in \u001b[0;36mblock\u001b[0;34m(matrix)\u001b[0m\n\u001b[1;32m     18\u001b[0m     slices[i] \u001b[39m=\u001b[39m \u001b[39mslice\u001b[39m(mid, \u001b[39mNone\u001b[39;00m)  \u001b[39m# slice for the second half along current dimension\u001b[39;00m\n\u001b[1;32m     19\u001b[0m     submatrix2 \u001b[39m=\u001b[39m matrix[\u001b[39mtuple\u001b[39m(slices)]\n\u001b[0;32m---> 20\u001b[0m     submatrices\u001b[39m.\u001b[39mextend(block(submatrix1))  \u001b[39m# recursively call block on each submatrix\u001b[39;00m\n\u001b[1;32m     21\u001b[0m     submatrices\u001b[39m.\u001b[39mextend(block(submatrix2))\n\u001b[1;32m     23\u001b[0m \u001b[39mreturn\u001b[39;00m submatrices\n",
+      "Cell \u001b[0;32mIn[1], line 20\u001b[0m, in \u001b[0;36mblock\u001b[0;34m(matrix)\u001b[0m\n\u001b[1;32m     18\u001b[0m     slices[i] \u001b[39m=\u001b[39m \u001b[39mslice\u001b[39m(mid, \u001b[39mNone\u001b[39;00m)  \u001b[39m# slice for the second half along current dimension\u001b[39;00m\n\u001b[1;32m     19\u001b[0m     submatrix2 \u001b[39m=\u001b[39m matrix[\u001b[39mtuple\u001b[39m(slices)]\n\u001b[0;32m---> 20\u001b[0m     submatrices\u001b[39m.\u001b[39mextend(block(submatrix1))  \u001b[39m# recursively call block on each submatrix\u001b[39;00m\n\u001b[1;32m     21\u001b[0m     submatrices\u001b[39m.\u001b[39mextend(block(submatrix2))\n\u001b[1;32m     23\u001b[0m \u001b[39mreturn\u001b[39;00m submatrices\n",
+      "    \u001b[0;31m[... skipping similar frames: block at line 20 (2967 times)]\u001b[0m\n",
+      "Cell \u001b[0;32mIn[1], line 20\u001b[0m, in \u001b[0;36mblock\u001b[0;34m(matrix)\u001b[0m\n\u001b[1;32m     18\u001b[0m     slices[i] \u001b[39m=\u001b[39m \u001b[39mslice\u001b[39m(mid, \u001b[39mNone\u001b[39;00m)  \u001b[39m# slice for the second half along current dimension\u001b[39;00m\n\u001b[1;32m     19\u001b[0m     submatrix2 \u001b[39m=\u001b[39m matrix[\u001b[39mtuple\u001b[39m(slices)]\n\u001b[0;32m---> 20\u001b[0m     submatrices\u001b[39m.\u001b[39mextend(block(submatrix1))  \u001b[39m# recursively call block on each submatrix\u001b[39;00m\n\u001b[1;32m     21\u001b[0m     submatrices\u001b[39m.\u001b[39mextend(block(submatrix2))\n\u001b[1;32m     23\u001b[0m \u001b[39mreturn\u001b[39;00m submatrices\n",
+      "Cell \u001b[0;32mIn[1], line 8\u001b[0m, in \u001b[0;36mblock\u001b[0;34m(matrix)\u001b[0m\n\u001b[1;32m      5\u001b[0m ndims \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(dimensions)\n\u001b[1;32m      7\u001b[0m \u001b[39m# Base case: return itself\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mall\u001b[39;49m(dim \u001b[39m<\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m2\u001b[39;49m \u001b[39mfor\u001b[39;49;00m dim \u001b[39min\u001b[39;49;00m dimensions):\n\u001b[1;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m [matrix]\n\u001b[1;32m     11\u001b[0m \u001b[39m# Split the matrix along each dimension\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[1], line 8\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      5\u001b[0m ndims \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(dimensions)\n\u001b[1;32m      7\u001b[0m \u001b[39m# Base case: return itself\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mall\u001b[39m(dim \u001b[39m<\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m2\u001b[39;49m \u001b[39mfor\u001b[39;00m dim \u001b[39min\u001b[39;00m dimensions):\n\u001b[1;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m [matrix]\n\u001b[1;32m     11\u001b[0m \u001b[39m# Split the matrix along each dimension\u001b[39;00m\n",
+      "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded in comparison"
+     ]
+    }
+   ],
+   "source": [
+    "arr4d = np.array([[[[1, 2], [3, 4]], [[5, 6], [7, 8]]], [[[9, 10], [11, 12]], [[13, 14], [15, 16]]]])\n",
+    "print('thsi is without block')\n",
+    "print(arr4d)\n",
+    "\n",
+    "this = block(arr4d)\n",
+    "print('this is w block')\n",
+    "print(this)\n",
+    "print(testme)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
