added cannifis course

--- a/bot.ipynb
+++ b/bot.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "a3fc48ac-c8d2-480b-933e-24a565b0c5b6",
    "metadata": {
     "scrolled": true
@@ -216,7 +216,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mvarr_agility\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[38], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mvarr_agility\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "Cell \u001b[0;32mIn[13], line 6\u001b[0m, in \u001b[0;36mvarr_agility\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mPAUSE \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m6\u001b[39m\n\u001b[1;32m      5\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mmoveTo(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3022\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m840\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[43mpyautogui\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3022\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m840\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mmoveTo(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3509\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m736\u001b[39m)\n\u001b[1;32m      8\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mclick(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3509\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m736\u001b[39m)\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyautogui/__init__.py:595\u001b[0m, in \u001b[0;36m_genericPyAutoGUIChecks.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    593\u001b[0m failSafeCheck()\n\u001b[1;32m    594\u001b[0m returnVal \u001b[38;5;241m=\u001b[39m wrappedFunction(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m--> 595\u001b[0m \u001b[43m_handlePause\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m_pause\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    596\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m returnVal\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyautogui/__init__.py:639\u001b[0m, in \u001b[0;36m_handlePause\u001b[0;34m(_pause)\u001b[0m\n\u001b[1;32m    637\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _pause:\n\u001b[1;32m    638\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(PAUSE, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(PAUSE, \u001b[38;5;28mfloat\u001b[39m)\n\u001b[0;32m--> 639\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPAUSE\u001b[49m\u001b[43m)\u001b[49m\n",
@@ -230,149 +230,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "bedc4705-55b3-4cb2-b4e8-4d449455381d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recording mouse clicks for 10 seconds. Press Ctrl + C to stop.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRecording mouse clicks for \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m seconds. Press Ctrl + C to stop.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(record_duration))\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 22\u001b[0m     \u001b[43mrecord_clicks\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[19], line 14\u001b[0m, in \u001b[0;36mrecord_clicks\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time \u001b[38;5;241m<\u001b[39m record_duration:\n\u001b[0;32m---> 14\u001b[0m     x, y, button_state \u001b[38;5;241m=\u001b[39m pyautogui\u001b[38;5;241m.\u001b[39mmouseInfo()\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m button_state \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdown\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     16\u001b[0m         recorded_clicks\u001b[38;5;241m.\u001b[39mappend((x, y))\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "import pyautogui\n",
-    "\n",
-    "# List to store recorded click events\n",
-    "recorded_clicks = []\n",
-    "\n",
-    "# Record mouse clicks for 10 seconds\n",
-    "record_duration = 10  # in seconds\n",
-    "\n",
-    "# Function to record click events\n",
-    "def record_clicks():\n",
-    "    start_time = time.time()\n",
-    "    while time.time() - start_time < record_duration:\n",
-    "        x, y, button_state = pyautogui.mouseInfo()\n",
-    "        if button_state == 'down':\n",
-    "            recorded_clicks.append((x, y))\n",
-    "        time.sleep(0.1)  # Adjust the sleep time to control the recording frequency\n",
-    "\n",
-    "# Start recording mouse clicks\n",
-    "print(\"Recording mouse clicks for {} seconds. Press Ctrl + C to stop.\".format(record_duration))\n",
-    "try:\n",
-    "    record_clicks()\n",
-    "except KeyboardInterrupt:\n",
-    "    pass\n",
-    "\n",
-    "# Print recorded clicks\n",
-    "print(\"Recorded clicks:\")\n",
-    "for click in recorded_clicks:\n",
-    "    print(click)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "2f9de653-4a6d-4ab4-9fb7-63b2cc57a9bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recording mouse clicks for 10 seconds. Press Ctrl + C to stop.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRecording mouse clicks for \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m seconds. Press Ctrl + C to stop.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(record_duration))\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 13\u001b[0m     \u001b[43mrecord_clicks\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[24], line 5\u001b[0m, in \u001b[0;36mrecord_clicks\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m(\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m      4\u001b[0m     recorded_clicks \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 5\u001b[0m     x, y, button_state \u001b[38;5;241m=\u001b[39m pyautogui\u001b[38;5;241m.\u001b[39mmouseInfo()\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m button_state \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdown\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m      7\u001b[0m         recorded_clicks\u001b[38;5;241m.\u001b[39mappend((x, y))\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
-     ]
-    }
-   ],
-   "source": [
-    "pyautogui.mouseInfo()\n",
-    "def record_clicks():\n",
-    "    while(1):\n",
-    "        recorded_clicks = []\n",
-    "        x, y, button_state = pyautogui.mouseInfo()\n",
-    "        if button_state == 'down':\n",
-    "            recorded_clicks.append((x, y))\n",
-    "        time.sleep(0.1)  # Adjust the sleep time to control the recording frequency\n",
-    "        return recorded_clicks\n",
-    "\n",
-    "print(\"Recording mouse clicks for {} seconds. Press Ctrl + C to stop.\".format(record_duration))\n",
-    "try:\n",
-    "    record_clicks()\n",
-    "except KeyboardInterrupt:\n",
-    "    pass\n",
-    "\n",
-    "# Print recorded clicks\n",
-    "print(\"Recorded clicks:\")\n",
-    "for click in recorded_clicks:\n",
-    "    print(click)\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "81f007ad-551f-456b-be3d-411ec17cf24f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m recorded_clicks \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m x, y, button_state \u001b[38;5;241m=\u001b[39m pyautogui\u001b[38;5;241m.\u001b[39mmouseInfo()\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m button_state \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdown\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m      4\u001b[0m     recorded_clicks\u001b[38;5;241m.\u001b[39mappend((x, y))\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
-     ]
-    }
-   ],
-   "source": [
-    "recorded_clicks = []\n",
-    "x, y, button_state = pyautogui.mouseInfo()\n",
-    "if button_state == 'down':\n",
-    "    recorded_clicks.append((x, y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "87020bb7-3b40-4b89-a381-a708f25118d7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import pyautogui\n",
+    "def cann_agility():\n",
+    "    while(1):\n",
+    "        pyautogui.PAUSE = 3.75\n",
+    "        pyautogui.moveTo(x=2693, y=384)\n",
+    "        pyautogui.click(x=2693, y=384)\n",
+    "        pyautogui.moveTo(x=2740, y=346)\n",
+    "        pyautogui.click(x=2740, y=346)\n",
+    "        pyautogui.moveTo(x=2605, y=479)\n",
+    "        pyautogui.click(x=2605, y=479)\n",
+    "        pyautogui.moveTo(x=2548, y=622)\n",
+    "        pyautogui.click(x=2548, y=622)\n",
+    "        pyautogui.moveTo(x=2714, y=680)\n",
+    "        pyautogui.click(x=2714, y=680)\n",
+    "        pyautogui.moveTo(x=2802, y=563)\n",
+    "        pyautogui.click(x=2802, y=563)\n",
+    "        pyautogui.moveTo(x=3135, y=476)\n",
+    "        pyautogui.click(x=3135, y=476)\n",
+    "        pyautogui.moveTo(x=2743, y=339)\n",
+    "        pyautogui.click(x=2743, y=339)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "859b2eb0-63dd-4e37-80a2-240f60c82fa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cann_agility()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8e5cafb-f148-4669-96e6-d13ff5308b00",
    "metadata": {},
    "outputs": [],
    "source": []
